# Video-Frame-Extractor

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflow/: test_unittests.yml
.github/workflows/: test_unittests.yml
tests/: test_video_framer.py
v2p/: cli.py  video_framer.py
